--- a/app/src/main/res/layout/one_day_one_articale_fragment_layout.xml
+++ b/app/src/main/res/layout/one_day_one_articale_fragment_layout.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:layout_marginLeft="3dp"
-              android:layout_marginRight="3dp"
               android:layout_width="match_parent"
               android:background="@color/apricotYellow"
               android:layout_height="match_parent">
@@ -28,6 +26,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_weight="18"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="5dp"
         android:layout_height="0dp">
 
         <TextView
@@ -42,7 +42,7 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="0dp"
-    android:layout_weight="1">
+    android:layout_weight="0.5">
     <TextView
         android:id="@+id/tv_one_article_previous_day"
         android:layout_width="0dp"
@@ -66,7 +66,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:layout_weight="0.5"
+        android:layout_weight="1"
         android:textSize="12sp"
         android:text="20170819"
         />
