--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
     <fragment
         android:id="@+id/fragment"
-        android:name="com.esioner.myapplication.oneDayOneArticle.OneDayOneArticleFragment"
+        android:name="com.esioner.myapplication.RootFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
