--- a/app/src/main/res/menu/navi_menu.xml
+++ b/app/src/main/res/menu/navi_menu.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<group>
-    <item
-        android:id="@+id/one_day_one_article"
-        android:title="每日一文"
-        android:checkable="true"/>
-</group>
+    <group
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/one_day_one_article"
+            android:checkable="true"
+            android:title="每日一文"/>
+        <item
+            android:id="@+id/nei_han_joke"
+            android:checkable="true"
+            android:title="内涵段子"/>
+    </group>
 
 
 </menu>
