--- a/app/src/main/res/layout/nei_han_main_pager_layout.xml
+++ b/app/src/main/res/layout/nei_han_main_pager_layout.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout_nei_han"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#203f51bf">
 
     </android.support.design.widget.TabLayout>
 
@@ -15,6 +17,7 @@
         android:id="@+id/viewpager_nei_han_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
     </android.support.v4.view.ViewPager>
+
+
 </LinearLayout>
