--- a/app/src/main/res/layout/nei_han_picture_fragment.xml
+++ b/app/src/main/res/layout/nei_han_picture_fragment.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/nei_han_picture_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="这是图片Fragment"
-        android:gravity="center"
-        android:textSize="50dp"/>
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
+
 </LinearLayout>
