--- a/app/src/main/res/layout/nei_han_picture_fragment.xml
+++ b/app/src/main/res/layout/nei_han_picture_fragment.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical">
 
+<com.scwang.smartrefresh.layout.SmartRefreshLayout
+    android:id="@+id/smart_refresh_layout_picture"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
+    <com.scwang.smartrefresh.header.CircleHeader
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/nei_han_picture_recycler_view"
@@ -11,5 +22,15 @@
         android:layout_height="match_parent">
 
     </android.support.v7.widget.RecyclerView>
+
+    <com.scwang.smartrefresh.layout.footer.BallPulseFooter
+        app:srlAccentColor="@color/colorAccent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+
+</com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
 
 </LinearLayout>
