--- a/app/src/main/res/menu/navi_menu.xml
+++ b/app/src/main/res/menu/navi_menu.xml
@@ -5,10 +5,12 @@
         <item
             android:id="@+id/one_day_one_article"
             android:checkable="true"
+            android:icon="@drawable/article_item_icon"
             android:title="每日一文"/>
         <item
             android:id="@+id/nei_han_joke"
             android:checkable="true"
+            android:icon="@drawable/nei_han_item_icon"
             android:title="内涵段子"/>
     </group>
 
