添加ViewFragment的代码，但有问题会导致闪退，带修复

--- a/app/src/main/res/layout/nei_han_video_fragment.xml
+++ b/app/src/main/res/layout/nei_han_video_fragment.xml
@@ -5,7 +5,7 @@
               android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/nei_han_video"
+        android:id="@+id/recycler_view_nei_han_video"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
