--- a/app/src/main/res/layout/nei_han_video_item.xml
+++ b/app/src/main/res/layout/nei_han_video_item.xml
@@ -5,7 +5,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
 
         <LinearLayout
@@ -16,14 +17,14 @@
             android:layout_marginTop="5dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/iv_picture_user_head_image"
+                android:id="@+id/iv_video_user_head_image"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/link"
                 />
 
             <TextView
-                android:id="@+id/tv_picture_user_name"
+                android:id="@+id/tv_video_user_name"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginStart="15dp"
@@ -35,7 +36,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tv_picture_content"
+            android:id="@+id/tv_video_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
