--- a/app/src/main/res/layout/nei_han_joke_item_layout.xml
+++ b/app/src/main/res/layout/nei_han_joke_item_layout.xml
@@ -51,29 +51,8 @@
             android:text="今天天气很不错，想出去玩玩，今天天气很不错，想出去玩玩，今天天气很不错，想出去玩玩，今天天气很不错，想出去玩玩。。。"
             android:textSize="20sp"
             />
-        <!--感觉目前还是不需要-->
-        <!--<RelativeLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="40dp">-->
 
-        <!--<CheckBox-->
-        <!--android:layout_width="25dp"-->
-        <!--android:layout_height="25dp"-->
-        <!--android:layout_toLeftOf="@+id/nei_han_joke_share"-->
-        <!--android:layout_centerVertical="true"-->
-        <!--android:layout_marginEnd="10dp"-->
-        <!--android:background="@drawable/nei_han_like_selector"-->
-        <!--android:button="@null"/>-->
-
-        <!--<ImageButton-->
-        <!--android:id="@+id/nei_han_joke_share"-->
-        <!--android:layout_width="25dp"-->
-        <!--android:layout_height="25dp"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_centerVertical="true"-->
-        <!--android:layout_marginEnd="10dp"-->
-        <!--android:background="@drawable/nei_han_share"/>-->
-        <!--</RelativeLayout>-->
+      <include layout="@layout/nei_han_item_bar"/>
     </LinearLayout>
 
 
