--- a/app/src/main/res/layout/nei_han_picture_item_layout.xml
+++ b/app/src/main/res/layout/nei_han_picture_item_layout.xml
@@ -51,21 +51,23 @@
             android:text="今天天气很不错，想出去玩玩，今天天气很不错，想出去玩玩，今天天气很不错，想出去玩玩，今天天气很不错，想出去玩玩。。。"
             android:textSize="20sp"
             />
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="500dp">
 
-    <ImageView
-        android:id="@+id/iv_picture_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/img"
-        />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="400dp">
 
-</RelativeLayout>
+            <ImageView
+                android:id="@+id/iv_picture_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img"
+                />
 
+        </RelativeLayout>
+
+        <include layout="@layout/nei_han_item_bar"/>
 
     </LinearLayout>
 
