--- a/app/src/main/res/layout/nei_han_picture_fragment.xml
+++ b/app/src/main/res/layout/nei_han_picture_fragment.xml
@@ -11,8 +11,9 @@
     android:layout_height="match_parent">
 
 
-    <com.scwang.smartrefresh.header.CircleHeader
+    <com.scwang.smartrefresh.header.StoreHouseHeader
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        app:shhText="Refreshing..."
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
@@ -23,13 +24,10 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <com.scwang.smartrefresh.layout.footer.BallPulseFooter
-        app:srlAccentColor="@color/colorAccent"
+    <com.scwang.smartrefresh.layout.footer.ClassicsFooter
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
-
-
 </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
 
