--- a/app/src/main/res/layout/nei_han_video_fragment.xml
+++ b/app/src/main/res/layout/nei_han_video_fragment.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/smart_refresh_layout_video"
@@ -11,10 +14,9 @@
         android:layout_height="match_parent">
 
 
-        <com.scwang.smartrefresh.header.CircleHeader
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <com.scwang.smartrefresh.header.CircleHeader xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_nei_han_video"
@@ -24,9 +26,12 @@
         </android.support.v7.widget.RecyclerView>
 
         <com.scwang.smartrefresh.layout.footer.BallPulseFooter
-            app:srlAccentColor="@color/colorAccent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            app:srlAccentColor="@color/colorAccent" />
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
 </LinearLayout>
+
+
+</android.support.v7.widget.CardView>
