修复段友秀显示过小的问题

--- a/app/src/main/res/layout/nei_han_main_pager_layout.xml
+++ b/app/src/main/res/layout/nei_han_main_pager_layout.xml
@@ -9,7 +9,7 @@
         android:id="@+id/tab_layout_nei_han"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#203f51bf">
+        android:background="#fff">
 
     </android.support.design.widget.TabLayout>
 
