--- a/app/src/main/res/layout/nei_han_friends_item_layout.xml
+++ b/app/src/main/res/layout/nei_han_friends_item_layout.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="500dp">
+    android:layout_height="wrap_content"
+    android:background="#fff"
+    android:layout_margin="3dp">
 
     <ImageView
         android:id="@+id/nei_han_friends_iv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        android:src="@drawable/img" />
+        android:src="@drawable/img"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/nei_han_friends_iv"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="10dp"
         android:orientation="vertical">
 
         <TextView
@@ -23,25 +27,27 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:text="这是内容，内容"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textStyle="bold"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp">
+            android:layout_marginBottom="10dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/iv_nei_han_friends_header_image"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:src="@drawable/link" />
+                android:src="@drawable/link"/>
 
             <TextView
                 android:id="@+id/tv_nei_han_friends_user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="5dp"
-                android:text="我是名字" />
+                android:text="我是名字"
+                android:textStyle="bold"/>
         </LinearLayout>
     </LinearLayout>
 
