--- a/app/src/main/res/layout/nei_han_joke_fragment.xml
+++ b/app/src/main/res/layout/nei_han_joke_fragment.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/smart_refresh_layout"
-    android:background="@color/apricotYellow"
     android:layout_width="match_parent"
+    android:background="#fff"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
