--- a/app/src/main/res/layout/nei_han_joke_item_layout.xml
+++ b/app/src/main/res/layout/nei_han_joke_item_layout.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
-    android:layout_marginTop="5dp"
-    android:background="@color/apricotYellow"
+    android:layout_marginBottom="10dp"
     android:orientation="vertical"
-    app:cardCornerRadius="15dp"
-    app:cardElevation="4dp">
+    >
+    <!--    app:cardCornerRadius="15dp"
+        android:background="@color/apricotYellow"
+
+    app:cardElevation="4dp"
+    -->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,12 +54,12 @@
             />
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp">
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:layout_marginBottom="10dp"
+                      android:layout_marginEnd="10dp"
+                      android:layout_marginStart="10dp"
+                      android:layout_marginTop="5dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -69,7 +70,7 @@
                 <ImageButton
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:background="@drawable/selector_nei_han_like" />
+                    android:background="@drawable/selector_nei_han_like"/>
 
                 <TextView
                     android:id="@+id/tv_nei_han_digg"
@@ -77,7 +78,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginStart="8dp"
                     android:gravity="bottom"
-                    android:text="2000" />
+                    android:text="2000"/>
 
             </LinearLayout>
 
@@ -90,7 +91,7 @@
                 <ImageButton
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:background="@drawable/selector_nei_nei_han_dislike" />
+                    android:background="@drawable/selector_nei_nei_han_dislike"/>
 
                 <TextView
                     android:id="@+id/tv_nei_han_bury"
@@ -98,7 +99,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginStart="8dp"
                     android:gravity="bottom"
-                    android:text="200" />
+                    android:text="200"/>
             </LinearLayout>
 
             <LinearLayout
@@ -111,7 +112,7 @@
                 <ImageButton
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:background="@drawable/nei_han_share" />
+                    android:background="@drawable/nei_han_share"/>
 
             </LinearLayout>
 
