--- a/app/src/main/res/layout/nei_han_picture_fragment.xml
+++ b/app/src/main/res/layout/nei_han_picture_fragment.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:background="#fff"
               android:orientation="vertical">
 
-<com.scwang.smartrefresh.layout.SmartRefreshLayout
-    android:id="@+id/smart_refresh_layout_picture"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-    <com.scwang.smartrefresh.header.StoreHouseHeader
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:shhText="Refreshing..."
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/nei_han_picture_recycler_view"
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/smart_refresh_layout_picture"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
 
-    <com.scwang.smartrefresh.layout.footer.ClassicsFooter
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-</com.scwang.smartrefresh.layout.SmartRefreshLayout>
+        <com.scwang.smartrefresh.header.StoreHouseHeader
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:shhText="Refreshing..."/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/nei_han_picture_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
 
 </LinearLayout>
