--- a/app/src/main/res/layout/nei_han_show_image_layout.xml
+++ b/app/src/main/res/layout/nei_han_show_image_layout.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="#000000"
+              android:fitsSystemWindows="true"
               android:orientation="vertical">
 
     <me.xiaopan.sketch.SketchImageView
         android:id="@+id/iv_show_image"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="18"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:paddingBottom="5dp"
-        android:layout_weight="1">
+        android:layout_below="@id/iv_show_image"
+        android:layout_height="20dp"
+        android:baselineAligned="false"
+        android:paddingBottom="5dp">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -35,8 +38,8 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="left"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:gravity="left">
 
             <ImageButton
                 android:id="@+id/btn_save_show_image"
@@ -49,4 +52,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
