--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,45 +6,22 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-
-
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:fitsSystemWindows="true"-->
-        <!--android:orientation="vertical">-->
-
-        <!--<android.support.design.widget.AppBarLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="?attr/actionBarSize">-->
-
-            <!--<android.support.v7.widget.Toolbar-->
-                <!--android:id="@+id/nei_han_tool_bar"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--app:layout_scrollFlags="enterAlways|scroll|snap"/>-->
-
-        <!--</android.support.design.widget.AppBarLayout>-->
-
-
-        <!---->
-    <!--</LinearLayout>-->
+    android:background="@drawable/timg">
 
     <FrameLayout
         android:id="@+id/fragment"
-        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
-        android:background="#fff"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
     </FrameLayout>
+
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
         android:background="#fff"
+        android:fitsSystemWindows="true"
         app:headerLayout="@layout/header_layout"
         app:menu="@menu/navi_menu"
         >
@@ -52,3 +29,24 @@
     </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
+    <!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:fitsSystemWindows="true"-->
+    <!--android:orientation="vertical">-->
+
+    <!--<android.support.design.widget.AppBarLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="?attr/actionBarSize">-->
+
+    <!--<android.support.v7.widget.Toolbar-->
+    <!--android:id="@+id/nei_han_tool_bar"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--app:layout_scrollFlags="enterAlways|scroll|snap"/>-->
+
+    <!--</android.support.design.widget.AppBarLayout>-->
+
+
+    <!---->
+    <!--</LinearLayout>-->
