--- a/app/src/main/res/layout/nei_han_joke_item_layout.xml
+++ b/app/src/main/res/layout/nei_han_joke_item_layout.xml
@@ -110,6 +110,7 @@
                 android:gravity="right">
 
                 <ImageButton
+                    android:id="@+id/btn_share"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:background="@drawable/nei_han_share"/>
