--- a/app/src/main/res/layout/nei_han_main_pager_layout.xml
+++ b/app/src/main/res/layout/nei_han_main_pager_layout.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:fitsSystemWindows="true"
+              android:background="@drawable/timg"
               android:orientation="vertical">
 
 
@@ -9,7 +11,8 @@
         android:id="@+id/tab_layout_nei_han"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#fff">
+        android:fitsSystemWindows="true"
+        >
 
     </android.support.design.widget.TabLayout>
 
