--- a/app/src/main/res/layout/nei_han_picture_item_layout.xml
+++ b/app/src/main/res/layout/nei_han_picture_item_layout.xml
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="400dp">
 
-            <ImageView
+            <me.xiaopan.sketch.SketchImageView
                 android:id="@+id/iv_picture_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
